My test comment

--- a/theme-20.2.0/Workspace/WestAcademic_Theme/Modules/Address/Sass/_address-details.scss
+++ b/theme-20.2.0/Workspace/WestAcademic_Theme/Modules/Address/Sass/_address-details.scss
@@ -11,6 +11,7 @@
 .address-details-container p {
     font-style: normal;
 }
+// test comment
 .address-details-container {
     padding: $sc-padding-lv3;
 }
